--- a/index.htm
+++ b/index.htm
@@ -21,6 +21,6 @@ we'll get this sorted eventually.  In the meantime, there are <i>good</i> websit
 could be visiting.  Give those a whirl eh, champ?
 <br/>
 <br/>
-If you're looking for that cool PowerShell Script you've heard about, <a href="update-dns/Google DNS Updater.htm">you've come to the right place</a>.
+If you're looking for that cool PowerShell Script you've heard about, <a href="update-dns/Google DNS Updater.html">you've come to the right place</a>.
 </body>
 </html>
