--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 	<title>Dacoda Nelson's Homepage</title>
+	
+	<img src="sc.logo.png" width='20%' height='auto' align='left'/>
+	
 	<link rel='icon' type='image/x-icon' href='/favicon.ico'> <!-- The beloved favicon! -->
 	<link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
 	<style>body{background-color:lightgrey;}</style>
@@ -10,7 +13,7 @@
 
 <body>
 
-	<font face="verdana" color="green" size="8">Dacoda Nelson's Homepage</font>
+	<font face="verdana" color="green" size="5">Dacoda Nelson's Homepage</font>
 	<br>
 	Text goes here sometimes.<br /><br />
 	You've arrived - congratulations.<br /><br />
