Fix issue with folder name causing problems with repo.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1"> <!-- Make it responsive -->
-	<link rel="stylesheet" href="pure/build/pure-min.css">
+	<link rel="stylesheet" href="pure/notbuild/pure-min.css">
 	
 	
 	<link rel='icon' type='image/x-icon' href='favicon.ico'> <!-- The beloved favicon! -->
