--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
 				<li class="pure-menu-item menu-item-divided pure-menu-selected">
 					<a href="#main" class="pure-menu-link">Home</a>
 				</li>
-				<li class="pure-menu-item"><a href="#Writing" class="pure-menu-link">Writing</a></li>
-				<li class="pure-menu-item"><a href="#ICS" class="pure-menu-link">Intellectual Consulting Services</a></li>
-				<li class="pure-menu-item"><a href="#Contact" class="pure-menu-link">Contact</a></li>
+				<li class="pure-menu-item"><a href="#ICS" class="pure-menu-link">Intellectual Consulting Services</a>
+                </li>
+				<li class="pure-menu-item"><a href="#Contact" class="pure-menu-link">Contact</a>
+                </li>
 <!--				<li class="pure-menu-item"><a href="#" class="pure-menu-link">Services</a></li> -->
 			</ul>
 		</div>
@@ -104,25 +105,8 @@
 			</div>
 		</div>
 	</div>
-	
-	<div id="Writing">
-		<div class="header">
-			<h1>Writing</h1>
-		</div>
-		
-		<div>
-			
-			<div class="content">
-				<p>There will be information about my writing here at some point.</p>
-				<p>I'm working on a book, and I write on Medium. I'll link to those eventually.</p>
-				
-				
-			</div>
-		</div>
-	</div>
-	
-	
-	
+
+
 	<div id="Contact">
 		<div class="header">
 			<h1>Contact Information</h1>
