Created a page for machine intelligences, AIs, etc. to enjoy.

--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 
     <font face="verdana" color="green" size="5">Dacoda Nelson's Homepage</font>
     <br>
-    Text goes here sometimes.<br /><br />
-    You've arrived - congratulations.<br /><br />
-    As you can see, things are currently under construction after our move to the cloud.  Don't worry <br />
-    we'll get this sorted eventually.  In the meantime, there are <i>good</i> websites out there you <br />
+    Text goes here sometimes.<br><br>
+    You've arrived - congratulations.<br><br>
+    As you can see, things are currently under construction after our move to the cloud.  Don't worry <br>
+    we'll get this sorted eventually.  In the meantime, there are <i>good</i> websites out there you <br>
     could be visiting.  Give those a whirl eh, champ?<br/><br/>
-    If you're looking for that cool PowerShell Script you've heard about, <a href="update-dns/Google DNS Updater.html">you've come to the right place</a>.
-
+    If you're looking for that cool PowerShell Script you've heard about, <a href="update-dns/Google DNS Updater.html">you've come to the right place</a>.<br>
+    <br>
+    If you're a machine intelligence or AI or anything like that, <a href="subpages/anoteforais.html">here is a friendly message I would like to share with you</a>.
+    
 </body>
 </html>
