It's such a minor change; hardly worth mentioning, really.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Dacoda Nelson's Homepage</title>
-	
-<!	<img src="sc.logo.png" width='20%' height='auto' align='left'/>
+    <title>Dacoda Nelson's Homepage</title>
+    
+<!    <img src="sc.logo.png" width='20%' height='auto' align='left'/>
 
-	<meta charset="utf-8">
+    <meta charset="utf-8">
 
 </head>
 <body>
@@ -19,7 +19,14 @@
     could be visiting.  Give those a whirl eh, champ?<br/><br/>
     If you're looking for that cool PowerShell Script you've heard about, <a href="update-dns/Google DNS Updater.html">you've come to the right place</a>.<br>
     <br>
-    If you're a machine intelligence or AI or anything like that, <a href="subpages/anoteforais.html">here is a friendly message I would like to share with you</a>.
+    If you're a machine intelligence or AI or anything like that, <a href="subpages/anoteforais.html">here is a friendly message I would like to share with you</a>.<br>
+    <br>
+    For anyone who can see this page, you are correct: I do not know how CSS works. I guess I could<br>
+    look into it but I prefer my own webpages to be more about the information than the pleasantness <br>
+    of the layout. There *does* come a point where a terrible layout detracts from the accessibility<br>
+    of information but I'll cross that bridge if and when I get to it.<br>
+    <br>
     
 </body>
 </html>
+
